--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -43,7 +43,13 @@ window.postLobbyMessage = function(message){
   method: "POST",
   headers: {'Content-Type': 'application/json', 'X-CSRFToken': csrftoken },
   body: JSON.stringify({message: message})
-});
+}).then(
+    (response) => {
+        if (!response.ok) {
+            response.text().then((text) => alert(text));
+        }
+    }
+);
   }
     </script>
 {% endblock %}
