--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -4,52 +4,8 @@
     <ul>
         {% for player in lobby %}<li>{{ player.as_link }}</li>{% endfor %}
     </ul>
-    <div>
-        <input type="text" id="outgoing-message" />
-        <button type="button"
-                onclick='postLobbyMessage(document.querySelector( "#outgoing-message" ).value)'>
-            Speak in the lobby
-        </button>
-    </div>
-{{ chatlog }}
+{{ chat_html }}
 {% endblock content %}
 {% block scripts %}
-    <script>
-var es = new ReconnectingEventSource('/events/lobby/');
-
-es.addEventListener('message', function (e) {
-    var parsed = JSON.parse(e.data)
-    var newRow = document.createElement("tr");
-
-    var newDatum;
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.when);
-    newRow.append(newDatum);
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.who);
-    newRow.append(newDatum);
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.what);
-    newRow.append(newDatum);
-
-    document.querySelector( "#chat-log" ).append(newRow);
-}, false);
-
-window.postLobbyMessage = function(message){
-    fetch("/send_lobby_message/", {
-  method: "POST",
-  headers: {'Content-Type': 'application/json', 'X-CSRFToken': csrftoken },
-  body: JSON.stringify({message: message})
-}).then(
-    (response) => {
-        if (!response.ok) {
-            response.text().then((text) => alert(text));
-        }
-    }
-);
-  }
-    </script>
+{{ chat_scripts }}
 {% endblock %}
