--- a/project/app/templates/partnership.html
+++ b/project/app/templates/partnership.html
@@ -9,16 +9,7 @@
             <input type="submit" value="Splitsville">
         </form>
     </div>
-    <div>
-        <div>
-            <input type="text" id="outgoing-message" />
-            <button type="button"
-                    onclick='postPlayerMessage(document.querySelector( "#outgoing-message" ).value)'>
-                Speak to {{ partner }}
-            </button>
-        </div>
-        {{ chatlog }}
-    </div>
+    {{ chat_html }}
     <br />
     {% if partner.table %}
         {{ partner.table.as_link }}
@@ -32,42 +23,6 @@
     {% endif %}
 {% endblock content %}
 {% block scripts %}
-    <script>
-var es = new ReconnectingEventSource('/events/player/{{ channel_name }}/');
-
-es.addEventListener('message', function (e) {
-    var parsed = JSON.parse(e.data)
-    var newRow = document.createElement("tr");
-
-    var newDatum;
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.when);
-    newRow.append(newDatum);
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.who);
-    newRow.append(newDatum);
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.what);
-    newRow.append(newDatum);
-
-    document.querySelector( "#chat-log" ).append(newRow);
-}, false);
-
-window.postPlayerMessage = function(message){
-    fetch("/send_player_message/" + {{ partner.pk }}, {
-  method: "POST",
-  headers: {'Content-Type': 'application/json', 'X-CSRFToken': csrftoken },
-  body: JSON.stringify({message: message})
-}).then(
-    (response) => {
-        if (!response.ok) {
-            response.text().then((text) => alert(text));
-        }
-    }
-);
-  }
+    {{ chat_scripts }}
     </script>
 {% endblock scripts %}
