--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -16,16 +16,7 @@
             <input type="submit" value="Partner Me Up, Daddy-O">
         </form>
     {% endif %}
-    <div>
-        <div>
-            <input type="text" id="outgoing-message" />
-            <button type="button"
-                    onclick='postPlayerMessage(document.querySelector( "#outgoing-message" ).value)'>
-                Speak to {{ player }}
-            </button>
-        </div>
-        {{ chatlog }}
-    </div>
+    {{ chat_html }}
     <br />
     {% if player.table %}
         {{ player.table.as_link }}
@@ -39,42 +30,5 @@
     {% endif %}
 {% endblock content %}
 {% block scripts %}
-    <script>
-var es = new ReconnectingEventSource('/events/player/{{ channel_name }}/');
-
-es.addEventListener('message', function (e) {
-    var parsed = JSON.parse(e.data)
-    var newRow = document.createElement("tr");
-
-    var newDatum;
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.when);
-    newRow.append(newDatum);
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.who);
-    newRow.append(newDatum);
-
-    newDatum = document.createElement("td");
-    newDatum.append(parsed.what);
-    newRow.append(newDatum);
-
-    document.querySelector( "#chat-log" ).append(newRow);
-}, false);
-
-window.postPlayerMessage = function(message){
-    fetch("/send_player_message/" + {{ player.pk }}, {
-  method: "POST",
-  headers: {'Content-Type': 'application/json', 'X-CSRFToken': csrftoken },
-  body: JSON.stringify({message: message})
-}).then(
-    (response) => {
-        if (!response.ok) {
-            response.text().then((text) => alert(text));
-        }
-    }
-);
-  }
-    </script>
+{{ chat_scripts }}
 {% endblock scripts %}
