--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -1,35 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-{% block player_list %}
-
-{# TODO -- use https://github.com/morlandi/django-ajax-datatable?tab=readme-ov-file #}
-{# specifically so that users can see who's looking for a partner, who's in the lobby, &c #}
-
-{% if extra_crap.total_count == extra_crap.filtered_count %}
-All {{ player_list.count }}
-{% else %}
-{{ extra_crap.filtered_count }} / {{ extra_crap.total_count }}
-{% endif %}
-players.
-<ul>
-{% for player in player_list %}
-<li>{{ player.as_link }}</li>
-{% endfor %}
-</ul>
-
-<div class="container">
-<div class="row row-cols-auto">
-<div class="col">
-<form method="post" action="{% url 'app:players' %}">
-{% csrf_token %}
-{{ form }}
-</div>
-<div class="col">
-<input type="submit" value="filter">
-</div>
-</div>
-</form>
-</div>
-
-{% endblock player_list %}
+    {% block player_list %}
+        {# TODO -- use https://github.com/morlandi/django-ajax-datatable?tab=readme-ov-file #}
+        {# specifically so that users can see who's looking for a partner, who's in the lobby, &c #}
+        {% if extra_crap.total_count == extra_crap.filtered_count %}
+            All {{ player_list.count }}
+        {% else %}
+            {{ extra_crap.filtered_count }} / {{ extra_crap.total_count }}
+        {% endif %}
+        players.
+        <ul>
+            {% for player in player_list %}<li>{{ player.as_link }}</li>{% endfor %}
+        </ul>
+        <div class="container">
+            <div class="row row-cols-auto">
+                <div class="col">
+                    <form method="get" action="{% url 'app:players' %}">
+                        {{ form }}
+                    </div>
+                    <div class="col">
+                        <input type="submit" value="filter">
+                    </div>
+                </div>
+            </form>
+        </div>
+    {% endblock player_list %}
 {% endblock content %}
