--- a/project/app/templates/lobby.html
+++ b/project/app/templates/lobby.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% load player_extras %}
 {% load partials %}
 
 {% block content %}
     <p>Lobby</p>
     <ul>
-        {% for player in lobby %}<li>{{ player.as_link }}</li>{% endfor %}
+        {% for player in lobby %}<li>{{ player|sedate_link:user.player }}</li>{% endfor %}
     </ul>
     <div>
         {% include "chat-html-partial.html#chat-html-partial" %}
