--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load player_extras %}
 {% block content %}
     {% block player_list %}
         {# TODO -- use https://github.com/morlandi/django-ajax-datatable?tab=readme-ov-file #}
@@ -10,7 +11,7 @@
         {% endif %}
         players.
         <ul>
-            {% for player in player_list %}<li>{{ player.as_link }}</li>{% endfor %}
+            {% for player in player_list %}<li>{{ player|sedate_link:user.player }}</li>{% endfor %}
         </ul>
         <div class="container">
             <div class="row row-cols-auto">
