--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -5,19 +5,38 @@
     <div>
         {# "user.player" is whoever is logged in. "player" is the player whose details we're examining. #}
         {{ player | styled_link:user.player }}
+
+        {% if player == user.player %}
+        {% if player.partner %}<br>My partner is {{ player.partner|sedate_link:user.player }}{% endif %}
+        {% endif %}
+
         {% if player.looking_for_partner %}
             is looking for a partner.
+            {% if user.player.looking_for_partner %}
+                {% if user.player != player %}Oh! I am too!{% endif %}
+                <a href="{% url 'app:players' %}?lookin_for_love=True">Find swinging singles in your area.</a>
+                {% if user.player != player %}
+                <form method="post" action="{% url 'app:player' player.id %}">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Partner Me Up, Daddy-O">
+                </form>
+                {% endif %}
+            {% endif %}
         {% else %}
-            is partnered up with {{ player.partner }} and now that I think of it, you shouldn't even be seeing this.
+        {% if player.partner == user.player %}
+    <h1>The great {{ user.player }} | {{ player }} partnership</h1>
+    <div>
+        <form method="post" action="{% url 'app:player' player.id %}">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" value="Splitsville">
+        </form>
+    </div>
         {% endif %}
-        {% if user.player.looking_for_partner and user.player != player %}
-            Oh! I am too!  <a href="{% url 'app:players' %}?lookin_for_love=True">Find swinging singles in your area.</a>
-            <form method="post" action="{% url 'app:player' player.id %}">
-                {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Partner Me Up, Daddy-O">
-            </form>
         {% endif %}
+
+
         <br />
         {% if player.table %}
             {{ player.table.as_link }}
