--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -5,14 +5,29 @@
         {# TODO -- use https://github.com/morlandi/django-ajax-datatable?tab=readme-ov-file #}
         {# specifically so that users can see who's looking for a partner, who's in the lobby, &c #}
         {% if extra_crap.total_count == extra_crap.filtered_count %}
-            All {{ player_list.count }}
+            All {{ extra_crap.total_count }}
         {% else %}
             {{ extra_crap.filtered_count }} / {{ extra_crap.total_count }}
         {% endif %}
         players.
-        <ul>
-            {% for player in player_list %}<li>{{ player|sedate_link:user.player }}</li>{% endfor %}
-        </ul>
+        <table>
+            <tr>
+                <th scope="col">Who</th>
+                <th scope="col">Where</th>
+            </tr>
+            {% for player in player_list %}
+                <tr style="border: 1px dotted">
+                    <td>{{ player|sedate_link:user.player }}</td>
+                    <td>
+                        {% if player.table %}
+                            {{ player.table.as_link }}
+                        {% else %}
+                            <a href="{% url 'app:lobby' %}">lobby</a>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
         <div class="container">
             <div class="row row-cols-auto">
                 <div class="col">
