Add "Partner" column to player_list table.

--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -13,11 +13,19 @@
         <table>
             <tr>
                 <th scope="col">Who</th>
+                <th scope="col">Partner</th>
                 <th scope="col">Where</th>
             </tr>
             {% for player in player_list %}
                 <tr style="border: 1px dotted">
                     <td>{{ player|sedate_link:user.player }}</td>
+                    <td>
+                      {% if player.partner %}
+                      {{ player.partner|sedate_link:user.player }}
+                      {% else %}
+                      😢
+                      {% endif %}
+                    </td>
                     <td>
                         {% if player.table %}
                             {{ player.table.as_link }}
