--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -4,10 +4,10 @@
 {% block content %}
     <div>
         {# "user.player" is whoever is logged in. "player" is the player whose details we're examining. #}
-        {{ player | styled_link:user.player }}
+        {{ player | styled_link:user }}
 
         {% if player == user.player %}
-        {% if player.partner %}<br>My partner is {{ player.partner|sedate_link:user.player }}{% endif %}
+        {% if player.partner %}<br>My partner is {{ player.partner|sedate_link:user }}{% endif %}
         {% endif %}
 
         {% if player.looking_for_partner %}
