This is POSTing properly, but the chat log doesn't update.

--- a/project/app/templates/chat-html-partial.html
+++ b/project/app/templates/chat-html-partial.html
@@ -5,6 +5,7 @@
   <div>
     <input
         type="text"
+        name="message"
         hx-post="{{ chat_post_endpoint }}"
         hx-target="#chat-log"
         hx-trigger="keyup[key=='Enter']"
