--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -16,7 +16,7 @@
               rel="stylesheet">
 
     </head>
-    <body>
+    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
         <div>
             <a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:lobby' %}">Lobby</a> | <a href="{% url 'app:table' %}">Tables</a>
             | <a href="{% url 'app:players' %}">Players</a>
@@ -58,6 +58,7 @@
         <script src="{% static 'django_eventstream/eventsource.min.js' %}"></script>
         <script src="{% static 'django_eventstream/reconnecting-eventsource.js' %}"></script>
         <script src="{% static 'app/datatables.js' %}"></script>
+        <script src="{% static 'app/htmx.min.js' %}"></script>
         <script>
 // from https://docs.djangoproject.com/en/5.0/howto/csrf/#acquiring-the-token-if-csrf-use-sessions-and-csrf-cookie-httponly-are-false
 function getCookie(name) {
