Start using htmx-sse
Kinda works, but we're appending a blob o' JSON, not a table row, to our table

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -59,6 +59,7 @@
         <script src="{% static 'django_eventstream/reconnecting-eventsource.js' %}"></script>
         <script src="{% static 'app/datatables.js' %}"></script>
         <script src="{% static 'app/htmx.min.js' %}"></script>
+        <script src="{% static 'app/sse.js' %}"></script>
         <script>
 // from https://docs.djangoproject.com/en/5.0/howto/csrf/#acquiring-the-token-if-csrf-use-sessions-and-csrf-cookie-httponly-are-false
 function getCookie(name) {
