--- a/project/app/templates/chat-html-partial.html
+++ b/project/app/templates/chat-html-partial.html
@@ -1,22 +1,27 @@
 {% load partials %}
-
+{% load player_extras %}
 {% partialdef chat-html-partial %}
 <div id="chat-html-partial">
   <div>
     <input
         autofocus
+        id="input"
         type="text"
         name="message"
         hx-post="{{ chat_post_endpoint }}"
         hx-swap="none"
         hx-trigger="keyup[key=='Enter']"
         />
-    <label>
+    <button
+      hx-include="#input"
+      hx-post="{{ chat_post_endpoint }}"
+      hx-swap="none"
+      >
       {% if chat_target == user.player %}Mumble to yourself{% else %}Speak to {{ chat_target }}{% endif %}
-    </label>
+    </button>
   </div>
   <div>
-    Chat Log 'twixt {{ user.player }} and {{ chat_target }}
+    Chat Log 'twixt {{ user.player|styled_link:user.player }} and {{ chat_target|styled_link:user.player }}
     <div id="chat-log"
            hx-ext="sse"
            hx-swap="beforeend scroll:bottom"
