--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -17,5 +17,5 @@
             are in <a href="{% url 'app:lobby' %}">the lobby</a>.
         {% endif %}
     </div>
-    {% include "chat-html-partial.html#chat-html-partial" %}
+    {% include "chat-partial.html#chat-html-partial" %}
 {% endblock content %}
