Thinking about smuggling data into the DOM
... so that after the page loads, JS can run around and fix things up, depending on the various roles

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -16,7 +16,8 @@
               rel="stylesheet">
 
     </head>
-    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+          data-viewer="{{ user.player }}">
         <div>
             <a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:lobby' %}">Lobby</a> | <a href="{% url 'app:table' %}">Tables</a>
             | <a href="{% url 'app:players' %}">Players</a>
