Greatly simplify partner status stuff.
* when partnerships are created or formed, we send a simple message like {"split": [16, 17], "joined": []}
* we send that event to a single global channel that any player can subscribe to
* the player_detail page subscribes, and when it gets one of those events:
  * it notes the two playerIDs in the event (igoring the word "split" or "joined", at least for now)
  * it notes the (up to four) playerIDs that are relevant, by examining "data-" attributes that I've cleverly stuck onto the DOM
  * it computes the intersection of those two sets; if it's non-empty, it reloads the player-detail div

--- a/project/app/templates/partnership-status-partial.html
+++ b/project/app/templates/partnership-status-partial.html
@@ -1,15 +1,13 @@
 {% load partials %}
 {% load player_extras %}
 {% partialdef partnership-status-partial %}
-{# Note that in this context, "user" is whoever clicked the "partnerup" or "splitsville" button; NOT necessarily the person who is viewing the web page!  *That* person is "as_viewed_by". #}
+
 <div id="partnership-status"
-     hx-ext="sse"
-     sse-connect="{{ partnership_event_source_endpoint }}"
-     sse-swap="message"
      style="border: 1px solid"
-     data-actor="{{ user.player }}"
-     data-subject="{{ subject }}"
-     data-viewer="{{ as_viewed_by }}" <!--this should be the same value as the same-named attribute on the body-->
+     data-player="{{ user.player.pk }}"
+     {% if user.player.partner %}data-player-partner="{{ user.player.partner.pk }}"{% endif %}
+     data-subject="{{ subject.pk }}"
+     {% if subject.partner %}data-subject-partner="{{ subject.partner.pk }}"{% endif %}
      >
     <ul>
     <li>User is {{ user.player }}</li>
