--- a/project/app/templates/player_detail.html
+++ b/project/app/templates/player_detail.html
@@ -19,3 +19,47 @@
     </div>
     {% include "chat-partial.html#chat-html-partial" %}
 {% endblock content %}
+{% block scripts %}
+<script>
+var es = new ReconnectingEventSource('/events/partnerships/');
+
+es.addEventListener('message', function (e) {
+    console.log(e.data);
+
+    // collect the two partner IDs in the message
+    var d = JSON.parse(e.data) ;
+    var messagePKs = d.split.concat(d.joined) ;
+    messagePKs = new Set(messagePKs.map((i) => String(i)) );
+
+    // collect the (up to) four relevant player IDs from this page
+    var watchedPKs = new Set();
+    var pageDataset = document.querySelector("#partnership-status").dataset;
+
+    if ("player" in pageDataset) {
+       watchedPKs.add(pageDataset.player);
+    }
+    if ("player-partner" in pageDataset) {
+        // camelCase: https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/dataset#name_conversion
+       watchedPKs.add(pageDataset.playerPartner);
+    }
+    if ("subject" in pageDataset) {
+       watchedPKs.add(pageDataset.subject);
+    }
+    if ("subject-partner" in pageDataset) {
+       watchedPKs.add(pageDataset.subjectPartner);
+    }
+
+    console.log("messagePKs:" + messagePKs);
+    console.log("watchedPKs:" + watchedPKs);
+
+    // compute the set intersection of those two
+    // if the intersection is non-empty, reload the relevant bit of the page.
+
+    if (messagePKs.intersection(watchedPKs).size > 0) {
+      htmx.ajax('GET', '/player/' + pageDataset.subject + '/partnership/', {target:'#partnership-status', swap:'outerHTML'});
+    }
+
+}, false);
+
+</script>
+{% endblock %}
