Aw, fixed my first regression
Broken at

    facc8e510b837e2c3856916b3fa10762bb42c7e1
    Author:     Eric Hanchrow <eric.hanchrow@gmail.com>
    AuthorDate: 2024-08-20 07:08:01 -0700

    Starting out.  TODO:

    * actually install htmx
    * fiddle the post to return HTML instead of whatever it returns

--- a/project/app/templates/base_player_detail.html
+++ b/project/app/templates/base_player_detail.html
@@ -20,4 +20,5 @@
     {% include "chat-partial.html#chat-html-partial" %}
 {% endblock content %}
 {% block scripts %}
+{% include "chat-scripts.js" %}
 {% endblock scripts %}
